# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@oak//bazel:defs.bzl", "oci_runtime_bundle")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_test")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//:container_deps.bzl", "get_user")

cc_binary(
    name = "helloworld",
    srcs = ["helloworld.cc"],
    visibility = ["//visibility:public"],
    deps = [
        "//examples/helloworld/proto:greeter_service",
    ],
)

pkg_files(
    name = "helloworld_bin",
    srcs = [":helloworld"],
    attributes = pkg_attributes(mode = "0500"),
    prefix = "/usr/local/bin",
)

user = get_user(user = "root")

pkg_tar(
    name = "helloworld_tar",
    srcs = [":helloworld_bin"],
    owner = "{}.{}".format(
        user.uid,
        user.gid,
    ),
)

oci_image(
    name = "helloworld_image",
    base = "@isolate_runtime_ubuntu_base",
    tars = [":helloworld_tar"],
)

oci_runtime_bundle(
    name = "helloworld_bundle",
    image = ":helloworld_image",
    visibility = ["//visibility:public"],
)

exports_files(["ez_manifest.json"])

cc_test(
    name = "helloworld_async_test",
    srcs = ["helloworld_async_test.cc"],
    visibility = ["//visibility:public"],
    deps = [
        "//core/cpp:ez_isolate_bridge",
        "//examples/helloworld/proto:greeter_service",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/time",
        "@com_google_googletest//:gtest",
    ],
)
