# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "summation_bench_client",
    srcs = ["summation_bench_client.rs"],
    deps = [
        "//enforcer/v1:enforcer_rust",
        "//examples/summation_by_lookup_table_with_backend/client:summation_client_lib",
        "//examples/summation_by_lookup_table_with_backend/proto:summation_rust_proto",
        "@crates//:anyhow",
        "@crates//:async-stream",
        "@crates//:clap",
        "@crates//:criterion",
        "@crates//:futures-core",
        "@crates//:hyper-util",
        "@crates//:prost",
        "@crates//:rand",
        "@crates//:tokio",
        "@crates//:tokio-retry",
        "@crates//:tokio-stream",
        "@crates//:tonic",
        "@crates//:tower",
    ],
)
