# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")
load("//:container_deps.bzl", "get_user")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "client",
    srcs = ["src/main.rs"],
    deps = [
        ":summation_client_lib",
        "//enforcer/v1:enforcer_rust",
        "//examples/summation_by_lookup_table_with_backend/proto:summation_rust_proto",
        "@crates//:anyhow",
        "@crates//:async-stream",
        "@crates//:clap",
        "@crates//:futures-core",
        "@crates//:hyper-util",
        "@crates//:log",
        "@crates//:prost",
        "@crates//:rand",
        "@crates//:tokio",
        "@crates//:tokio-retry",
        "@crates//:tokio-stream",
        "@crates//:tonic",
        "@crates//:tower",
    ],
)

rust_library(
    name = "summation_client_lib",
    srcs = ["src/lib.rs"],
    deps = [
        "//enforcer/v1:enforcer_rust",
        "//examples/summation_by_lookup_table_with_backend/proto:summation_rust_proto",
        "@crates//:prost",
        "@crates//:rand",
        "@crates//:tokio-retry",
        "@crates//:tonic",
    ],
)

pkg_files(
    name = "client_bin",
    srcs = [":client"],
    attributes = pkg_attributes(mode = "0500"),
    prefix = "/client/bin",
)

pkg_files(
    name = "client_proto",
    srcs = ["//examples/summation_by_lookup_table_with_backend/proto:summation_proto"],
    attributes = pkg_attributes(mode = "0400"),
    prefix = "/client/proto",
)

user = get_user(user = "nonroot")

pkg_tar(
    name = "client_tar",
    srcs = [
        ":client_bin",
        ":client_proto",
    ],
    owner = "{}.{}".format(
        user.uid,
        user.gid,
    ),
)

oci_image(
    name = "client_image",
    base = "@isolate_runtime_ubuntu_base",
    entrypoint = ["/client/bin/client"],
    tars = [":client_tar"],
    workdir = "/",
)

oci_load(
    name = "client_tarball",
    image = ":client_image",
    repo_tags = ["privacy-sandbox/encrypted-zone/client:0.1-{}".format(user.user)],
)

filegroup(
    name = "client.tar",
    srcs = [":client_tarball"],
    output_group = "tarball",
    visibility = ["//visibility:public"],
)
