# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@oak//bazel:defs.bzl", "oci_runtime_bundle")
load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

cc_binary(
    name = "summation_by_looping_with_backend",
    srcs = ["summation_by_looping_with_backend.cc"],
    visibility = ["//visibility:public"],
    deps = [
        "//examples/summation_by_looping_with_backend/proto:arithmetic_backend_grpc_proto",
        "//examples/summation_by_looping_with_backend/proto:arithmetic_backend_service",
        "//examples/summation_by_looping_with_backend/proto:summation_grpc_proto",
        "//examples/summation_by_looping_with_backend/proto:summation_service",
    ],
)

cc_binary(
    name = "summation_arithmetic_backend",
    srcs = ["summation_arithmetic_backend.cc"],
    visibility = ["//visibility:public"],
    deps = [
        "//examples/summation_by_looping_with_backend/proto:arithmetic_backend_grpc_proto",
        "//examples/summation_by_looping_with_backend/proto:arithmetic_backend_service",
    ],
)

pkg_tar(
    name = "summation_by_looping_with_backend_server_tar",
    srcs = [
        ":summation_arithmetic_backend",
        ":summation_by_looping_with_backend",
    ],
    package_dir = "/usr/local/bin",
)

oci_image(
    name = "summation_by_looping_with_backend_server_image",
    base = "@isolate_runtime_ubuntu_base",
    tars = [":summation_by_looping_with_backend_server_tar"],
)

oci_runtime_bundle(
    name = "summation_by_looping_with_backend_server_bundle",
    image = ":summation_by_looping_with_backend_server_image",
    visibility = ["//visibility:public"],
)

exports_files(["summation_by_looping_with_backend_manifest.json"])
